# lms-report

./: MANIFEST.in  README.md  integration_notes.md  main.py  pyproject.toml  report_router.py  router4.py  router5.py
lms_report_tutor/: __init__.py  plugin.py
templates/: asm_dashboard01.html  asm_dashboard02.html  asm_dashboard03.html  asm_dashboard04.html  asm_dashboard05.html  report1.html
userops_reports/: __init__.py  apps.py  db.py  permissions.py  urls.py  views.py
userops_reports/services/: asm_reports.py  cluster_reports.py  common.py  course_reports.py  user_reports.py
userops_reports/static/userops_reports/css/: dashboard.css  intelligence_dashboard.css  report_test.css
userops_reports/static/userops_reports/js/: dashboard.js  intelligence_dashboard.js  report_test.js
userops_reports/templates/userops_reports/: progress_overview.html  progress_overview_test.html  progress_overview_test_1.html
