[project]
name = "lms-report"
version = "0.2.0"
description = "Reusable Django app package for Open edX UserOps progress reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.2,<5.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["userops_reports*"]

[tool.setuptools.package-data]
"userops_reports" = ["templates/**/*.html", "static/**/*"]
